--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "com.codegiraffe.nonstandard.scripting",
   "version": "1.0.0",
   "displayName": "NonStandard Scripting",
-  "description": "Code written by Mr.V (Michael Vaganov)\n\nAdds .Stringify() method to objects, which uses C# reflection to output a JSON-like representation.\n\nAdds CodeConvert, which can TryParse JSON-like string representations into runtime C# objects.",
+  "description": "* Adds .Stringify() method to objects, which uses C# reflection to output a JSON-like representation.\n* Adds CodeConvert, which can TryParse JSON-like string representations into runtime C# objects.",
   "unity": "2017.1",
   "keywords": [
     "library",
