--- a/Tests/EditMode/EditModeTests.asmdef
+++ b/Tests/EditMode/EditModeTests.asmdef
@@ -1,5 +1,5 @@
 {
-    "name": "EditModeTests",
+    "name": "NonStandardScripting.EditModeTests",
     "rootNamespace": "",
     "references": [
         "UnityEngine.TestRunner",
