--- a/nonstandard.scripting.asmdef
+++ b/nonstandard.scripting.asmdef
@@ -1,5 +1,6 @@
 {
     "name": "com.codegiraffe.nonstandard.scripting",
+    "rootNamespace": "",
     "references": [],
     "includePlatforms": [],
     "excludePlatforms": [],
